@@ -256,6 +256,9 @@ $compose_width = getPref($data_dir, $username, 'compose_width', 640);
 /* signature placement settings */
 $sig_first = getPref($data_dir, $username, 'sig_first', 0);
 
+/* strip signature from replies setting */
+$trim_signature_on_reply = getPref($data_dir, $username, 'trim_signature_on_reply', 0);
+
 /* use the internal date of the message for sorting instead of the supplied header date */
 $internal_date_sort = getPref($data_dir, $username, 'internal_date_sort', SMPREF_ON);
 
