@@ -21,6 +21,8 @@ Version 1.4.20 - SVN
   - Added unread links in message view.
   - Added the ability to configure Google Mail (Gmail) as the mail server
     behind SquirrelMail.
+  - Added option in display preferences that allows the signature to be stripped
+    from the original message when replying (#2952876).  Thanks to Sven Strickroth.
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
